--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 <body>
     <div class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <br>
+        <nav class="navbar navbar-light bg-light">
+            <a class="navbar-brand">Navbar</a>
+            <form class="form-inline">
+              <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+            </form>
+          </nav>
         <div>
             <ul>
                 <li>
@@ -21,9 +29,11 @@
                 <li>
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
+                
             </ul>
         </div>
     </div>
+    
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
